# discord_link_bot

./: .dockerignore  .gitignore  CRITIQUE.md  Dockerfile  Makefile  README.md  appspec.yml  buildspec.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  terraform.tfstate
.githooks/: pre-push
.github/workflows/: deploy.yml
cogs/: general.py  help.py  link_manager.py  link_monitor.py
core/: bot_setup.py  channel_utils.py  logging_setup.py  version.py
core/db/: db_manager.py  models.py
core/db/daos/: guild_settings_dao.py  output_channel_dao.py
docs/: DOCKER.md
infra/: .terraform.lock.hcl  README-multi-bot.md  README.md  cloudwatch.tf  codebuild.tf  codecommit.tf  codedeploy.tf  data.tf  dynamodb.tf  ec2.tf  ecr.tf  iam.tf  main.tf  outputs.tf  pipeline.tf  plan.txt  plan_dynamo_v2.txt  s3.tf  secrets.tf  ssh.tf  terraform.tfstate  terraform.tfstate.1763805241.backup  terraform.tfstate.backup  terraform.tfvars.example  tfplan  tfplan-add-secret  tfplan-add-triggers  tfplan-allow-codecommit  tfplan-buildspec-fix  tfplan-buildspec-fix2  tfplan-buildspec-fix3  tfplan-buildspec-fix4  tfplan-buildspec-fix5  tfplan-codebuild-fix2  tfplan-codebuild-fix3  tfplan-codecommit-us-east1  tfplan-disable-approval  tfplan-enable-approval  tfplan-enable-pipeline  tfplan-final  (+14 more)
link_utils/: categories.py  url_tools.py
scripts/: cleanup.sh  ecr_login.sh  local_deploy.sh  setup_codecommit.sh  setup_ssm_parameters.sh  start_container.sh  stop_container.sh
tests/: __init__.py  test_categories.py  test_channel_utils.py  test_url_tools.py
